tests/compile_fail/from/multiple_enum_attributes.stderr
error: only single kind of `#[from(...)]` attribute is allowed here
 --> tests/compile_fail/from/multiple_enum_attributes.rs:4:5
  |
4 |     #[from(forward)]
  |     ^
